Feat: topbar and browserRouter

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,5 +11,6 @@
   --textColor: #222525;
   --buttonColor:#078080;
   --main:#fffffe;
-  --secondary:#f45d48;
+  --secondary: #078080;
+  --tertiary:#f45d48;
 }
