--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,4 +1,34 @@
-.navbar{
+.navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
+    height: 100px;
+    width: 100%;
+    // padding: 0 2rem;
+    background-color: var(--secondary);
+    color: whitesmoke;
+
+    .navbar__anchors a {
+        margin: 0 1rem;
+        color: whitesmoke;
+        font-size: 18px;
+        cursor: pointer;
+    }
+
+    .navbar__anchors a:hover {
+        text-decoration: underline;
+
+    }
+
+    .navbar div,
+    nav {
+        display: flex;
+        align-items: center;
+    }
 }
+
+// @media only screen and (max-width: 480px) {
+//     .navbar__anchors a {
+//         color: red;
+//     }
+// }
